# people-journal

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md
backend/: .env.example  cache.go  db.go  extract.go  go.mod  go.sum  handlers.go  jira.go  main.go  prep.go
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  api.js  constants.js  utils.js
frontend/src/components/: EditableList.jsx  EntryCard.jsx  FilterBar.jsx  PulseBar.jsx  PulseSelector.jsx  SearchBar.jsx  TagPill.jsx  TrendChart.jsx
frontend/src/views/: Dashboard.jsx  EntryDetail.jsx  NewEntry.jsx  PersonView.jsx  PrepView.jsx  ReviewEntry.jsx  Settings.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: ai.rs  db.rs  lib.rs
