[package]
name = "people-journal"
version = "0.1.0"
description = "1:1 meeting prep tool for engineering managers"
authors = ["Gil Browdy"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
rusqlite = { version = "0.35", features = ["bundled"] }
chrono = "0.4"
dirs = "6"
